--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "foundation_patterns",
   "version": "1.0.0",
   "devDependencies": {
-    "extend": "^3.0.0",
+    "@frctl/fractal": "^1.1.3",
+    "@frctl/twig": "^1.0.0-beta.1",
     "del": "^2.2.0",
+    "extend": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
