--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-load-plugins": "^1.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sass-lint": "^1.1.1",
     "gulp-shell": "^0.5.2",
     "gulp-size": "^2.1.0",
