--- a/templates/patterns/marketing-site/content-section/marketing-site-content-section.pattern.yml
+++ b/templates/patterns/marketing-site/content-section/marketing-site-content-section.pattern.yml
@@ -25,3 +25,10 @@ marketing_site_content_section:
       preview: >
         <a href="#" class="round button small">learn more</a>
   use: "@marketing/content-section/marketing-site-content-section.twig"
+  libraries:
+    - pattern:
+        css:
+          component:
+            marketing-site-content-section.css: {}
+        js:
+          https://use.fontawesome.com/719374638f.js: { type: external }
