--- a/pattern-lab/composer.json
+++ b/pattern-lab/composer.json
@@ -35,7 +35,8 @@
         "pattern-lab/styleguidekit-twig-default": "^3.0.0",
         "pattern-lab/drupal-twig-components": "^2.0.0",
         "aleksip/plugin-data-transform": "^1.0.0",
-        "evanlovely/plugin-twig-namespaces": "^1.0"
+        "evanlovely/plugin-twig-namespaces": "^1.0",
+        "pattern-lab/plugin-data-inheritance": "^1.0"
     },
     "scripts": {
         "server": "php core/console --server",
