Fixed typo in pattern lab data

--- a/pattern-lab/source/_patterns/marketing-site/footer/marketing-site-footer.yml
+++ b/pattern-lab/source/_patterns/marketing-site/footer/marketing-site-footer.yml
@@ -40,5 +40,5 @@ bottom_links:
   - link: <a href="#">Services</a>
   - link: <a href="#">Works</a>
   - link: <a href="#">News</a>
-  - link: <a href="#">Contacty</a>
+  - link: <a href="#">Contact</a>
 
