Added ui patterns for marketing site footer and related global patterns

--- a/foundation_patterns.info.yml
+++ b/foundation_patterns.info.yml
@@ -52,3 +52,6 @@ component-libraries:
   marketing:
     paths:
       - templates/patterns/marketing-site
+  global:
+    paths:
+      - templates/patterns/global
