--- a/foundation_patterns.libraries.yml
+++ b/foundation_patterns.libraries.yml
@@ -5,3 +5,4 @@ global:
       css/foundation_patterns.css: {}
   js:
     js/foundation_patterns.js: {}
+    https://use.fontawesome.com/719374638f.js: { type: external }
