Updated pattern library to use new global patterns for menu links

--- a/pattern-lab/config/config.yml
+++ b/pattern-lab/config/config.yml
@@ -41,6 +41,12 @@ twigTestExt: test.php
 plugins:
     twigNamespaces:
         enabled: true
-        namespaces: { marketing: { paths: [../templates/patterns/marketing-site] } }
+        namespaces:
+          marketing:
+            paths:
+              - ../templates/patterns/marketing-site
+          global:
+            paths:
+              - ../templates/patterns/global
     dataInheritance:
         enabled: true
