Adjustments to allow marketing hero section pattern to play nice with Drupal

--- a/pattern-lab/source/_patterns/marketing-site/hero-section/marketing-site-hero-section.yml
+++ b/pattern-lab/source/_patterns/marketing-site/hero-section/marketing-site-hero-section.yml
@@ -1,4 +1,4 @@
 header: Yeti Snowcone Agency
 subheader: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!
-button: <a href="#" class="round button">learn more</a>
+button: <a href="#">learn more</a>
 background_url: https://images.pexels.com/photos/8264/pexels-photo.jpg?h=350&auto=compress&cs=tinysrgb
