--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@frctl/fractal": "^1.1.3",
     "@frctl/twig": "^1.0.0-beta.1",
+    "concurrently": "^3.5.0",
     "del": "^2.2.0",
     "extend": "^3.0.0",
     "gulp": "^3.9.1",
@@ -24,6 +25,8 @@
     "start": "gulp",
     "build": "gulp build",
     "watch": "gulp watch",
+    "docker:watch": "concurrently \"gulp watch:patterns\" \"npm run docker:cr\"",
+    "docker:cr": "docker exec fpsandbox bash -c \"drush --root=/var/www/drupalvm/drupal/web cr\"",
     "postinstall": "node_modules/.bin/rimraf node_modules/**/*.info"
   },
   "private": true
