Added responsive social media section component to pattern library

--- a/pattern-lab/config/config.yml
+++ b/pattern-lab/config/config.yml
@@ -45,7 +45,7 @@ plugins:
           marketing:
             paths:
               - ../templates/patterns/marketing-site
-          global:
+          global-patterns:
             paths:
               - ../templates/patterns/global
     dataInheritance:
