HACK17-wstewart-patterns-testimonial-block-vertical
- img class getting lost.
- Removed image class from `<img>` tag
- updated twig template to wrap `<img>` in `<div>` with original image class
- removed image class from template and pattern lab yaml file preview.

--- a/pattern-lab/source/_patterns/global-patterns/testimonial-block-vertical/testimonial-block-vertical.yml
+++ b/pattern-lab/source/_patterns/global-patterns/testimonial-block-vertical/testimonial-block-vertical.yml
@@ -1,5 +1,5 @@
 testimonial_avatar: >
-        <img class="testimonial-block-vertical-avatar" src="https://placehold.it/60" alt="" />
+        <img src="https://placehold.it/60" alt="" />
 testimonial_quote:
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices, elit sed faucibus pharetra, diam mauris bibendum orci, sit amet ullamcorper purus dui sit amet augue. Donec aliquet diam ut neque mattis, eu tristique sem rutrum.
 testimonial_person:  John Doe
