hack17: testimonial item pattern yml update, css update

--- a/templates/patterns/global/testimonial-slider/testimonial-item.pattern.yml
+++ b/templates/patterns/global/testimonial-slider/testimonial-item.pattern.yml
@@ -29,7 +29,4 @@ testimonial_item:
       preview: <img src="https://placeimg.com/50/50/nature">
   use: "@global/testimonial-slider/testimonial-item.twig"
   libraries:
-    - pattern:
-        css:
-          component:
-            testimonial-slider.css: {}
+    - ui_patterns/testimonial_slider.pattern
