--- a/templates/patterns/global/testimonial-slider/testimonial-slider.pattern.yml
+++ b/templates/patterns/global/testimonial-slider/testimonial-slider.pattern.yml
@@ -31,15 +31,15 @@ testimonial_slider:
                       <div class="small-12 large-9 column">
                         <div class="row align-middle testimonial-slide-content">
                           <div class="small-12 medium-4 column hide-for-small-only profile-pic">
-                            <img src="https://placeimg.com/300/300/architecture">
+                            <img src="https://placeimg.com/300/300/nature">
                           </div>
                           <div class="small-12 medium-8 column testimonial-slide-text">
-                            <p class="testimonial-slide-quotation">Hide when guests come over instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
+                            <p class="testimonial-slide-quotation">Squee when guests come over, instantly break out into full speed gallop across the house for no reason mrow touch water with paw then recoil in horror.</p>
                             <div class="testimonial-slide-author-container">
                               <div class="small-profile-pic show-for-small-only">
-                                <img src="https://placeimg.com/50/50/architecture">
+                                <img src="https://placeimg.com/50/50/nature">
                               </div>
-                              <p class="testimonial-slide-author-info">Fleas Witherspoon<br><i class="subheader">Cat World Inc.</i></p>
+                              <p class="testimonial-slide-author-info">Peas Servingspoon<br><i class="subheader">Cat World Inc.</i></p>
                             </div>
                           </div>
                         </div>
